--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,30 +9,17 @@
     android:paddingEnd="@dimen/indexView_paddingEnd"
     tools:context=".IndexFragment">
 
-    <Button
-        android:id="@+id/toLayoutBtn"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/toAnimationBtn"
-
-        android:text="Layout"
-        />
-
-    <Button
-        android:id="@+id/toAnimationBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintStart_toStartOf="@id/toLayoutBtn"
-        app:layout_constraintTop_toTopOf="@id/toLayoutBtn"
-        app:layout_constraintEnd_toEndOf="@id/toLayoutBtn"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
 
-        android:text="Animation"
         />
 
 </android.support.constraint.ConstraintLayout>
