--- a/app/src/main/res/layout/item_albumlist.xml
+++ b/app/src/main/res/layout/item_albumlist.xml
@@ -2,23 +2,24 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingBottom="@dimen/layoutView_margin_s"
     >
 
     <data>
-        <variable name="photo" type="com.alan.sweaterui.model.PhotoModel" />
-
-        <variable name="handle" type="com.alan.sweaterui.BindingFragment" />
-        <variable name="convert" type="com.alan.sweaterui.BindingFragment" />
+        <variable
+            name="album"
+            type="com.alan.sweaterui.model.AlbumModel"
+            />
+        <variable
+            name="convert"
+            type="com.alan.sweaterui.adapter.AlbumListAdapter"
+            />
     </data>
 
-
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/viewContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        tools:context=".LayoutFragment">
+        android:layout_height="wrap_content"
+        >
 
         <ImageView
             android:id="@+id/image"
@@ -27,11 +28,8 @@
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="@dimen/layoutView_margin_m"
-            android:layout_marginTop="@dimen/layoutView_margin_m"
 
             android:src="@drawable/ic_launcher_background"
-            android:onClick="@{handle::onImageClick}"
             />
 
         <TextView
@@ -42,12 +40,11 @@
             app:layout_constraintStart_toEndOf="@id/image"
             app:layout_constraintTop_toTopOf="@id/image"
             android:layout_marginStart="@dimen/layoutView_margin_s"
-            android:layout_marginEnd="@dimen/layoutView_margin_s"
 
             android:lines="1"
             android:textSize="@dimen/layoutView_textSize_m"
             android:textStyle="bold"
-            android:text="@{photo.author}"
+            android:text="@{album.author}"
             />
 
         <TextView
@@ -58,32 +55,13 @@
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
-            android:layout_marginEnd="@dimen/layoutView_margin_m"
             android:layout_marginTop="@dimen/layoutView_margin_s"
 
             android:lines="2"
             android:textSize="@dimen/layoutView_margin_m"
             android:ellipsize="end"
-            android:text="@{convert.toBoundString(photo.width, photo.height) + `\nSize: `+ convert.toSizeString(photo.size)}"
+            android:text="@{convert.toBoundString(album.width, album.height)}"
             />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/bindRecycler"
-
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-
-            android:layout_marginStart="@dimen/layoutView_margin_m"
-            android:layout_marginTop="@dimen/layoutView_margin_m"
-            android:layout_marginEnd="@dimen/layoutView_margin_m"
-            >
-
-        </android.support.v7.widget.RecyclerView>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
